--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>tarjetamovi</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
