--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
-java:
-  - "1.8"
+jdk:
+  - oraclejdk8
 before_script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
