--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ before_script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
   - mvn test
+notifications:
+  email: false
