--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ jdk:
   - oraclejdk8
 before_script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - npm install coveralls
 script:
   - mvn test
 notifications:
