Adding mvn org.eluder.coveralls:coveralls-maven-plugin:report in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,4 @@ script:
 notifications:
   email: false
 after_success:
-  - mvn coveralls:report
-  
+  - mvn org.eluder.coveralls:coveralls-maven-plugin:report
