--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ jdk:
 before_script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
-  - mvn test:report
+  - mvn test
 notifications:
   email: false
 after_success:
-  - mvn coveralls:report
+  - mvn clean test coveralls:report
