--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:
 notifications:
   email: false
 after_success:
-  - mvn clean test jacoco:report coveralls:report
+  - mvn clean cobertura:cobertura coveralls:cobertura
