--- a/pom.xml
+++ b/pom.xml
@@ -25,44 +25,23 @@
         </dependency>
     </dependencies>
     <build>
+        <sourceDirectory>src/main/java/poli/tarjetamovi</sourceDirectory>
+        <testSourceDirectory>src/test/java/poli/tarjetamovi</testSourceDirectory>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configurations>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
+                    <aggregate>true</aggregate>
+                </configurations>
+            </plugin>
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
-            </plugin>
-            <plugin>
-                <!-- CODE COVERAGE -->
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.4.201502262128 </version>
-                <executions>
-                    <!-- Prepare execution with Surefire -->
-                    <execution>
-                        <id>pre-unit-test</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <propertyName>surefireArgLine</propertyName>
-                        </configuration>
-                    </execution>
-                    <!-- Generate report after tests are run -->
-                    <execution>
-                        <id>post-unit-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <!-- Specify classes to ignore in code coverage >
-                <configuration>
-                    <excludes>
-                        <exclude>**/ui/**</exclude>
-                        <exclude>**/StartSolverUi**</exclude>
-                    </excludes>
-                </configuration-->
             </plugin>
         </plugins>
     </build>
