--- a/pom.xml
+++ b/pom.xml
@@ -25,23 +25,22 @@
         </dependency>
     </dependencies>
     <build>
-        <sourceDirectory>src/main/java/poli/tarjetamovi</sourceDirectory>
-        <testSourceDirectory>src/test/java/poli/tarjetamovi</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.6</version>
                 <configuration>
                     <format>xml</format>
                     <maxmem>256m</maxmem>
+                    <!-- aggregated reports for multi-module projects -->
                     <aggregate>true</aggregate>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>4.3.0</version>
+                <version>2.2.0</version>
             </plugin>
         </plugins>
     </build>
